# rusty-qual-app

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: actions.rs  application.rs  domain.rs  lib.rs  logic.rs  ports.rs
crates/core/src/domain/: tests.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: infra.rs
