[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
