[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
