[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { path = "../core", package = "core" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
